# smart-home-cource-kos

./: .gitignore  README.md  final.md
day1-homework/: CMakeLists.txt  README.md  cross-build.sh
day1-homework/checker/: CMakeLists.txt
day1-homework/checker/src/: checker.cpp
day1-homework/einit/: CMakeLists.txt
day1-homework/einit/src/: init.yaml.in  security.psl
day1-homework/kettle/: CMakeLists.txt
day1-homework/keys/: CMakeLists.txt
day1-homework/keys/src/: keys.cpp
day1-homework/network/: CMakeLists.txt
day1-homework/resources/: Keys.edl  Network.edl
day2-homework/: CMakeLists.txt  Makefile  README.md
day2-homework/checker/: CMakeLists.txt
day2-homework/einit/: CMakeLists.txt
day2-homework/einit/src/: init.yaml.in  security.psl
day2-homework/kettle/src/: kettle.cpp
day2-homework/keys/: CMakeLists.txt
day2-homework/klog/src/: klog_entity.c
day2-homework/klog_storage/src/: klog_storage_entity.cpp
day2-homework/network/src/: network.cpp
day2-homework/resources/: Checker.edl  KlogStorageEntity.edl  ServerChecker.cdl  ServerKettle.cdl  ServerKeys.cdl
day3-homework/: CMakeLists.txt  Makefile  README.md
day3-homework/checker/: CMakeLists.txt
day3-homework/checker/src/: checker.cpp
day3-homework/einit/: CMakeLists.txt
day3-homework/einit/src/: init.yaml.tests.in  security.psl  security.tests.psl
day3-homework/kettle/: CMakeLists.txt
day3-homework/kettle/include/: logic.h
day3-homework/kettle/src/: kettle.cpp  logic.cpp
day3-homework/keys/src/: keys.cpp
day3-homework/klog/src/: klog_entity.c
day3-homework/klog_storage/: CMakeLists.txt
day3-homework/klog_storage/src/: klog_storage_entity.cpp
day3-homework/network/src/: network.cpp
day3-homework/resources/: Kettle.edl  KlogEntity.edl  KssUnitTest.edl  ServiceChecker.idl  ServiceKettle.idl  ServiceKeys.idl  TestEntity.edl
day3-homework/tests/: CMakeLists.txt
day3-homework/tests/src/: main.cpp
